# jira-issue-tracker

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  api.py  config.py  conftest.py  example.env  issue_box.py  jira_connection_settings_popup.py  jira_issue_tracker.py  main.py  pyproject.toml  pytest.ini  security.py  setup.py  test_api.py  test_error_handling.py  test_issue_box.py  test_jira_issue_tracker.py  test_main.py
.github/workflows/: ci.yml
